--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,17 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+/* styles/globals.css */
+html {
+  scroll-behavior: smooth;
+}
+/* styles/globals.css */
+* {
+  transition: all 0.2s ease; /* Aplica la transición suave a todas las propiedades */
+}
+
+/* Si solo quieres aplicar la transición a propiedades específicas, puedes hacerlo así */
+a, button, .hover\:scale-90:hover {
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
